--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 # Ignore everything
-*
-# ...even if they are in subdirectories
-!*/
+/*
 
 # But not these files...
 !.gitignore
+!wp-content/
 !gwtd3.sql
